--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,23 +15,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
+    
+    - name: Install dependencies
+      run: go mod tidy
+    
+    - name: Install gosec
+      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+    - name: Run Gosec
+      run: $(go env GOPATH)/bin/gosec ./...
 
     - name: Build
-      run: go build -v ./...
+      run: go build ./...
 
+    - name: Create and push tag
+      id: create_tag
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4.6.2
-      with:
-        # Artifact name
-        name: rbfs-client
-        # optional, default is artifact
-        # A file, directory or wildcard pattern that describes what to upload
-        path: .
-        # The desired behavior if no files are found using the provided path.
-          
+    # - name: Upload a Build Artifact
+    #   uses: actions/upload-artifact@v4.6.2
+    #   with:
+    #     # Artifact name
+    #     name: rbfs-client
+    #     # optional, default is artifact
+    #     # A file, directory or wildcard pattern that describes what to upload
+    #     path: .
+    #     # The desired behavior if no files are found using the provided path.
+  
+
